// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept svg markup 1`] = `
<vime-icon>
  <!---->
  <svg focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" style="transform: scale(1); opacity: 1;">
    <rect height="100" width="300"></rect>
  </svg>
</vime-icon>
`;

exports[`should be structurally sound 1`] = `
<vime-icon href="#my-icon">
  <!---->
  <svg focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" style="transform: scale(1); opacity: 1;">
    <use href="#my-icon"></use>
  </svg>
</vime-icon>
`;
